[gd_scene load_steps=8 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.745098, 0.737255, 0.737255, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Box" type="VBoxContainer" parent="."]
margin_right = 1022.0
margin_bottom = 600.0

[node name="ListaPronta" type="Label" parent="Box"]
margin_right = 1022.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "Lista pronta:"

[node name="Lista" type="Label" parent="Box/ListaPronta"]
margin_left = 258.0
margin_top = 24.0
margin_right = 750.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
align = 1
valign = 1

[node name="BotãoL1" type="Button" parent="Box/ListaPronta"]
margin_left = 74.0
margin_top = 49.0
margin_right = 196.0
margin_bottom = 95.0
text = "Pressione para mostrar"

[node name="ListaVazia" type="Label" parent="Box"]
margin_top = 151.0
margin_right = 1022.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "Lista vazia:"

[node name="TextEdit" type="TextEdit" parent="Box/ListaVazia"]
margin_left = 57.0
margin_top = 26.0
margin_right = 278.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="Box/ListaVazia"]
margin_left = 507.0
margin_top = 22.0
margin_right = 869.0
margin_bottom = 132.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 3 )
align = 1
valign = 1

[node name="Button" type="Button" parent="Box/ListaVazia"]
margin_left = 306.0
margin_top = 48.0
margin_right = 461.0
margin_bottom = 106.0
text = "Salvar na lista"

[node name="FuncaoPronta" type="Label" parent="Box"]
margin_top = 302.0
margin_right = 1022.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "Função pronta:"

[node name="Button3" type="Button" parent="Box/FuncaoPronta"]
margin_left = 72.0
margin_top = 52.0
margin_right = 232.0
margin_bottom = 105.0
text = "Pressione para mostrar"

[node name="Label" type="Label" parent="Box/FuncaoPronta"]
margin_left = 274.0
margin_top = 27.0
margin_right = 764.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 4 )
align = 1
valign = 1

[node name="Icon" type="Sprite" parent="Box/FuncaoPronta"]
position = Vector2( 860, 74 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="FuncaoVazia" type="Label" parent="Box"]
margin_top = 453.0
margin_right = 1022.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 1 )
text = "Função vazia:"

[node name="TextEdit" type="TextEdit" parent="Box/FuncaoVazia"]
margin_left = 57.0
margin_top = 23.0
margin_right = 279.0
margin_bottom = 119.0

[node name="Button4" type="Button" parent="Box/FuncaoVazia"]
margin_left = 310.0
margin_top = 43.0
margin_right = 463.0
margin_bottom = 99.0
text = "Imprimir na função"

[node name="Label" type="Label" parent="Box/FuncaoVazia"]
margin_left = 519.0
margin_top = 29.0
margin_right = 906.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 5 )
align = 1
valign = 1

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 861, 69 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Box/ListaPronta/BotãoL1" to="." method="_on_BotoL1_pressed"]
[connection signal="pressed" from="Box/ListaVazia/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Box/FuncaoPronta/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Box/FuncaoVazia/Button4" to="." method="_on_Button4_pressed"]
